--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>全球安心守護：居家急救自救指南 | Global First Aid Guide</title>
     <meta name="description" content="針對老人、小孩及分心成年人的日常意外急救指南，涵蓋口腔戳傷、魚刺梗塞與哈姆立克法。">
 
-    <meta property="og:url" content="https://ousiaspira.github.io/kawaiicare/">
+    <meta property="og:url" content="https://ousiaspira.github.io/kawaiicare/OS.jpg">
     <meta property="og:type" content="website">
     <meta property="og:title" content="全球安心守護：居家急救自救指南">
     <meta property="og:description" content="關鍵時刻的自救法！正確處置口腔戳傷、異物梗塞，守護最愛的人。">
@@ -295,4 +295,5 @@
         render();
     </script>
 </body>
+
 </html>
