--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="全球安心守護：居家急救自救指南">
     <meta property="og:description" content="關鍵時刻的自救法！正確處置口腔戳傷、異物梗塞，守護最愛的人。">
-    <meta property="og:image" content="https://your-domain.com/OS.jpg">
+    <meta property="og:image" content="https://ousiaspira.github.io/kawaiicare/OS.jpg">
     <meta property="og:image:width" content="1392">
     <meta property="og:image:height" content="768">
 
@@ -297,3 +297,4 @@
 </body>
 
 </html>
+
