--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="全球安心守護：居家急救指南">
-    <meta name="twitter:image" content="https://your-domain.com/OS.jpg">
+    <meta name="twitter:image" content="https://ousiaspira.github.io/kawaiicare/OS.jpg">
 
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;700&family=Quicksand:wght@500;700&family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
     
@@ -297,4 +297,5 @@
 </body>
 
 </html>
+
 
